[tool.poetry]
name = "bili-search-review"
version = "0.1.0"
description = ""
authors = ["mokurin000 <1348292515@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bilibili-api-python = "^16.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
